crates/dlin-core/src/render/snapshots/dlin_core__render__mermaid__tests__show_columns_escapes_quotes.snap
---
source: src/render/mermaid.rs
expression: output
---
flowchart LR
    model_orders["orders<br/>---<br/>Total Amount, col #quot;quoted#quot;"]


    classDef model fill:#4A90D9,stroke:#333,color:#fff
    class model_orders model
