crates/dlin-core/src/render/snapshots/dlin_core__render__mermaid__tests__show_columns_lineage.snap
---
source: src/render/mermaid.rs
expression: output
---
flowchart LR
    exposure_dashboard>"dashboard"]
    model_orders["orders<br/>---<br/>order_id, customer_id, status, total_amount"]
    model_stg_orders["stg_orders<br/>---<br/>order_id, customer_id, amount"]
    source_raw_orders(["raw.orders<br/>---<br/>id, customer_id, amount, created_at"])

    model_orders ==>|exposure| exposure_dashboard
    model_stg_orders -->|ref| model_orders
    source_raw_orders -.->|source| model_stg_orders

    classDef model fill:#4A90D9,stroke:#333,color:#fff
    classDef source fill:#27AE60,stroke:#333,color:#fff
    classDef exposure fill:#E74C3C,stroke:#333,color:#fff
    class exposure_dashboard exposure
    class model_orders model
    class model_stg_orders model
    class source_raw_orders source
